--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "engines": {
-    "node":"20.x"
+    "node": "20.x"
   },
   "scripts": {
     "dev": "env-cmd -f .env nodemon src/index.js",
@@ -14,8 +14,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "puppeteer": "^23.10.3",
+    "puppeteer-core": "^10.1.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
   },
