--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,13 @@
       "use": "@vercel/node"
     }
   ],
+  "functions":{
+    "index.js":{
+      "memory":1024,
+      "maxDuration":10
+    }
+
+  },
   "routes": [
     {
       "src": "/(.*)",
