--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "env-cmd -f .env nodemon src/index.js",
-    "start": "env-cmd -f .env node src/index.js"
+    "dev": "env-cmd -f .env nodemon api/index.js",
+    "start": "env-cmd -f .env node api/index.js"
   },
   "author": "Asif Razza",
   "license": "ISC",
