--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "puppeteer": "^23.10.3",
     "puppeteer-core": "^10.1.0",
     "qrcode-terminal": "^0.12.0",
