--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "node": "20.x"
   },
   "scripts": {
-   
     "dev": "env-cmd -f .env nodemon api/index.js",
     "start": "env-cmd -f .env node api/index.js"
   },
@@ -20,7 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
-    "puppeteer": "^23.10.4",
+    "puppeteer-core": "^10.4.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
   },
