--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,12 @@
   "version": 2,
   "functions": {
     "api/index.js": {
+      "runtime": "nodejs20.x",
       "memory": 1024,
-      "maxDuration": 10
+      "maxDuration": 10,
+      "includeFiles":[
+               "node_modules/chrome-aws-lambda/**/*"
+      ]
     }
   },
   "routes": [
