--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,7 @@
     "api/index.js": {
       "runtime": "nodejs20.x",
       "memory": 1024,
-      "maxDuration": 30,
-      "includeFiles": [
-        "node_modules/@sparticuz/chromium/**/*"
-      ]
+      "maxDuration": 30
     }
   },
   "routes": [
@@ -16,9 +13,11 @@
       "dest": "api/index.js"
     }
   ],
+  "includeFiles": [
+    "node_modules/@sparticuz/chromium/**"
+  ],
   "env": {
     "IS_SERVERLESS": "true",
-    "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true",
-    "PUPPETEER_EXECUTABLE_PATH": "/usr/bin/chromium"
+    "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true"
   }
 }
