--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
+  "version": 2,
   "functions": {
     "api/index.js": {
-      "runtime": "nodejs16.x",
+      "runtime": "nodejs20.x",
       "memory": 1024,
-      "maxDuration": 30
+      "maxDuration": 10
     }
   },
   "routes": [
@@ -13,7 +14,6 @@
     }
   ],
   "env": {
-    "IS_SERVERLESS": "true",
-    "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true"
+    "IS_SERVERLESS": "true"
   }
 }
