--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,16 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.js": {
-      "runtime": "nodejs20.x",
-      "memory": 1024,
-      "maxDuration": 10
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "runtime": "nodejs20.x",
+        "memory": 1024,
+        "maxDuration": 10
+      }
     }
-  },
+  ],
   "routes": [
     {
       "src": "/(.*)",
